[package]
name = "donc"
version = "1.0.0"
authors = ["Tatounee <oettam32@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
csv = "1.1"
pbr = "1.0"
tokio = { version = "1.24", features = ["macros", "rt-multi-thread", "sync"] }
